# MapReduce-System

./: .gitignore  CHANGELOG.org  LICENSE  README.md  build.ninja  compile_commands.json
doc/: MapReduce_System_Dokumentation.aux  MapReduce_System_Dokumentation.fdb_latexmk  MapReduce_System_Dokumentation.fls  MapReduce_System_Dokumentation.tex  MapReduce_System_Dokumentation.toc
documentation/: MapReduce_System_Dokumentation.aux  MapReduce_System_Dokumentation.bbl  MapReduce_System_Dokumentation.bcf  MapReduce_System_Dokumentation.blg  MapReduce_System_Dokumentation.fdb_latexmk  MapReduce_System_Dokumentation.fls  MapReduce_System_Dokumentation.run.xml  MapReduce_System_Dokumentation.tex  MapReduce_System_Dokumentation.toc  literatur.bib
meson-info/: intro-targets.json  meson-info.json
meson-logs/: meson-log.txt
source/: .gitignore  meson.build  meson_options.txt  testfile.txt
source/include/: client.h  masterserver.h  slaveserver.h  utils.h
source/src/: utils.cpp
source/src/client/: client.cpp  clientfile.txt  main.cpp
source/src/masterserver/: main.cpp  masterserver.cpp
source/src/server/: main.cpp
source/src/slaveserver/: main.cpp  slaveserver.cpp
src/: meson.build
src/include/: client.h  utils.h
src/src/: utils.cpp
src/src/client/: client.cpp  clientfile.txt  main.cpp
src/src/server/: main.cpp
