option('asio_include_dir', type : 'string', value : '/home/alex/asio/', description : 'the include dir of asio')
option('cli11_include_dir', type : 'string', value : '/home/alex/CLI11/CLI11/', description : 'the dir containing CLI11.hpp')
option('json_include_dir', type : 'string', value : '/home/alex/json/json/json/', description : 'the include dir of json')
option('rang_include_dir', type : 'string', value : '/home/alex/rang/rang/', description : 'the dir containing rang.hpp')
option('spdlog_include_dir', type : 'string', value : '/home/alex/spdlog-1.8.2/include', description : 'the include dir of spdlog')
option('tabulate_include_dir', type : 'string', value : '/home/alex/tabulate/tabulate/tabulate', description : 'the dir containing tabulate.hpp')
option('json_include_dir', type : 'string', value : '/home/alex/json/', description : 'the include dir of json')
option('tabulate_include_dir', type : 'string', value : '/home/alex/tabulate/', description : 'the dir containing tabulate.hpp')